// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HighlightText /> Tests should render correctly and match snapshot - with search query 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontWeight": "600",
          "textShadowColor": "rgba(0, 0, 0, 0.75)",
          "textShadowRadius": 2.5,
        }
      }
    >
      <Text />
      <Text
        style={
          {
            "color": "#42855B",
            "fontWeight": "600",
            "textShadowColor": "rgba(255, 255, 255, 0.1)",
            "textShadowRadius": 2.5,
          }
        }
        testID="highlight-text-highlighted"
      >
        Chro
      </Text>
      <Text>
        me
      </Text>
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`<HighlightText /> Tests should render correctly and match snapshot - without search query 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontWeight": "600",
          "textShadowColor": "rgba(0, 0, 0, 0.75)",
          "textShadowRadius": 2.5,
        }
      }
    >
      Chrome
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
